Fixed Featured Work div alignment issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,55 +1,64 @@
-html{
+html {
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
-*{
-    padding:0;
-    margin:0;
+
+* {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
     font-family: "DM Sans", sans-serif;
 }
-body{
+
+body {
     background-color: #0c0c1d;
     color: lightgray;
 }
 
-a{
+a {
     text-decoration: none;
-    color:inherit;
+    color: inherit;
 }
-section{
-    height:100vh;
+
+section {
+    height: 100vh;
     width: 100vw;
     scroll-snap-align: center;
     overflow: hidden;
 }
 
 
-.course{
+.course {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.box{
+
+.box {
     width: 200px;
     height: 200px;
     background-color: white;
-    
+
 }
 
-@mixin mobile{
-    @media (max-width:738px){
-        @content;
-    }
-}
-@mixin mobile{
-    @media (max-width:1024px){
-        @content;
-    }
-}
-@mixin mobile{
-    @media (max-width:1366px){
+// @mixin mobile{
+//     @media (max-width:738px){
+//         @content;
+//     }
+// }
+// @mixin mobile{
+//     @media (max-width:1024px){
+//         @content;
+//     }
+// }
+// @mixin mobile{
+//     @media (max-width:1366px){
+//         @content;
+//     }
+// }
+@mixin mobile {
+    @media (max-width:1024px) {
         @content;
     }
 }
